--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,12 +65,12 @@
               >Home</a
             >
             <a
-              href="/myparentrecord-site/updates.html"
+              href="updates.html"
               class="{% if page.url contains '/updates' or page.layout == 'post' %}text-brand-teal font-semibold{% else %}text-off-white hover:text-brand-teal{% endif %} transition-colors"
               >Updates</a
             >
             <a
-              href="/myparentrecord-site/changelog.html"
+              href="changelog.html"
               class="{% if page.url == '/changelog.html' %}text-brand-teal font-semibold{% else %}text-off-white hover:text-brand-teal{% endif %} transition-colors"
               >Changelog</a
             >
