--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -200,7 +200,7 @@ layout: default
           <ul class="space-y-4">
             {% for post in site.posts limit:3 %}
             <li>
-              <a href="{{ post.url }}" class="group">
+              <a href="{{ post.url | relative_url }}" class="group">
                 <span class="block text-xs text-gray-400 mb-1"
                   >{{ post.date | date: "%b %d" }}</span
                 >
