- updates relative URLs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,10 @@
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16 items-center">
-          <a href="/" class="flex items-center cursor-pointer group">
+          <a
+            href="{{ '/' | relative_url }}"
+            class="flex items-center cursor-pointer group"
+          >
             <div
               class="bg-brand-teal p-2 rounded-lg mr-2 group-hover:bg-brand-teal/90 transition-colors"
             >
