- changes button from "Support the Project" to "Leave a Review"

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -155,7 +155,7 @@ layout: default
             target="_blank"
             class="block w-full text-center bg-white text-[#7c3aed] font-bold py-3 rounded-xl hover:bg-gray-50 transition-colors relative z-10 shadow-sm"
           >
-            Support the Project
+            Leave a Review
           </a>
         </div>
 
