- changes main landing page to Updates page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,8 +68,8 @@
               >Home</a
             > -->
             <a
-              href="{{ '/updates.html' | relative_url }}"
-              class="{% if page.url contains '/updates' or page.layout == 'post' %}text-brand-teal font-semibold{% else %}text-off-white hover:text-brand-teal{% endif %} transition-colors"
+              href="{{ '/' | relative_url }}"
+              class="{% if page.url contains '/' or page.layout == 'post' %}text-brand-teal font-semibold{% else %}text-off-white hover:text-brand-teal{% endif %} transition-colors"
               >Updates</a
             >
             <a
