--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,7 +116,7 @@ layout: default
       <!-- Footer Navigation -->
       <div class="mt-12 pt-8 border-t border-white/10">
         <a
-          href="{{ '/updates.html' | relative_url }}"
+          href="{{ '/' | relative_url }}"
           class="inline-flex items-center text-[#2a9d8f] font-bold hover:text-[#238b7e] transition-colors"
         >
           <i data-lucide="arrow-left" class="w-4 h-4 mr-2"></i> Back to Updates
